--- a/index.html
+++ b/index.html
@@ -117,6 +117,15 @@
         </div>
     </header>
 
+    <main class="">
+
+    </main>
+
+    <footer id="footer">
+        <div class="inner">
+            <h1 class="logo"><img src="https://themagazine.co.kr/SG/img/logo.gif" alt="the magazine"></h1>
+        </div>
+    </footer>
 
     <script src="./js/index.js"></script>
 </body>
