css 파일 위치 변경

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>더매거진 홈페이지 반응형 리뉴얼</title>
-    <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="/style/css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
 </head>
 
@@ -117,7 +117,7 @@
         </div>
     </header>
 
-    <main class="">
+    <main class="contents">
 
     </main>
 
