--- a/index.html
+++ b/index.html
@@ -27,89 +27,88 @@
             <div class="gnb-wrapper">
                 <ul class="gnb">
                     <li>
-                        <a href="">베스트</a>
-                        <a href="">패션/여성</a>
-                        <a href="">인테리어/건축/디자인</a>
-                        <a href="">과학/논술</a>
-                        <a href="">교육/어학</a>
-                        <a href="">시사/경제/경영</a>
-                        <a href="">여행/레져/취미</a>
-                        <a href="">산업/기술</a>
-                        <a href="">문화/예술</a>
+                        <a href=""><span>베스트</span></a>
+                        <a href=""><span>패션/여성</span></a>
+                        <a href=""><span>인테리어/건축/디자인</span></a>
+                        <a href=""><span>과학/논술</span></a>
+                        <a href=""><span>교육/어학</span></a>
+                        <a href=""><span>시사/경제/경영</span></a>
+                        <a href=""><span>여행/레져/취미</span></a>
+                        <a href=""><span>산업/기술</span></a>
+                        <a href=""><span>문화/예술</span></a>
                         <a href="">
-                            <span>국내잡지</span>
-                            <span>국내잡지</span>
+                            <strong>국내잡지</strong>
+                            <strong>국내잡지</strong>
                         </a>
                     </li>
                     <li>
-                        <a href="">베스트</a>
-                        <a href="">교육/과학/아동</a>
-                        <a href="">생활/취미/요리</a>
-                        <a href="">시사/경제/경영</a>
-                        <a href="">문화/예술</a>
-                        <a href="">패션/뷰티</a>
-                        <a href="">레져/여행/스포츠</a>
-                        <a href="">건축/인테리어/디자인</a>
-                        <a href="">해외신문</a>
-                        <a href="">미국</a>
-                        <a href="">영국</a>
-                        <a href="">일본</a>
-                        <a href="">독일</a>
-                        <a href="">이태리</a>
-                        <a href="">프랑스</a>
-                        <a href="">중국/아시아</a>
+                        <a href=""><span>베스트</span></a>
+                        <a href=""><span>교육/과학/아동</span></a>
+                        <a href=""><span>생활/취미/요리</span></a>
+                        <a href=""><span>시사/경제/경영</span></a>
+                        <a href=""><span>문화/예술</span></a>
+                        <a href=""><span>패션/뷰티</span></a>
+                        <a href=""><span>레져/여행/스포츠</span></a>
+                        <a href=""><span>건축/인테리어/디자인</span></a>
+                        <a href=""><span>해외신문</span></a>
+                        <a href=""><span>미국</span></a>
+                        <a href=""><span>영국</span></a>
+                        <a href=""><span>일본</span></a>
+                        <a href=""><span>독일</span></a>
+                        <a href=""><span>이태리</span></a>
+                        <a href=""><span>프랑스</span></a>
+                        <a href=""><span>중국/아시아</span></a>
                         <a href="">
-                            <span>해외잡지</span>
-                            <span>해외잡지</span>
+                            <strong>해외잡지</strong>
+                            <strong>해외잡지</strong>
                         </a>
                     </li>
                     <li>
-                        <a href="">중앙일간지</a>
-                        <a href="">어린이신문</a>
-                        <a href="">지방신문</a>
-                        <a href="">해외신문</a>
-                        <a href="">학술지</a>
-                        <a href="">전문신문</a>
+                        <a href=""><span>중앙일간지</span></a>
+                        <a href=""><span>어린이신문</span></a>
+                        <a href=""><span>지방신문</span></a>
+                        <a href=""><span>해외신문</span></a>
+                        <a href=""><span>학술지</span></a>
+                        <a href=""><span>전문신문</span></a>
                         <a href="">
-                            <span>신문</span>
-                            <span>신문</span>
+                            <strong>신문</strong>
+                            <strong>신문</strong>
                         </a>
                     </li>
                     <li>
-                        <a href="">초등학교</a>
-                        <a href="">중학교</a>
-                        <a href="">고등학교</a>
-                        <a href="">헤어/카페</a>
-                        <a href="">기업/회사</a>
-                        <a href="">공공도서관</a>
+                        <a href=""><span>초등학교</span></a>
+                        <a href=""><span>중학교</span></a>
+                        <a href=""><span>고등학교</span></a>
+                        <a href=""><span>헤어/카페</span></a>
+                        <a href=""><span>기업/회사</span></a>
+                        <a href=""><span>공공도서관</span></a>
                         <a href="">
-                            <span>테마관</span>
-                            <span>테마관</span>
+                            <strong>테마관</strong>
+                            <strong>테마관</strong>
                         </a>
                     </li>
                     <li>
-                        <a href="">정기구독이벤트</a>
-                        <a href="">이달 사은품</a>
-                        <a href="">이달 콜라보레이션</a>
-                        <a href="">종이책+전자책</a>
-                        <a href="">패키지 할인</a>
-                        <a href="">eBook</a>
-                        <a href="">행정서류지원</a>
+                        <a href=""><span>정기구독이벤트</span></a>
+                        <a href=""><span>이달 사은품</span></a>
+                        <a href=""><span>이달 콜라보레이션</span></a>
+                        <a href=""><span>종이책+전자책</span></a>
+                        <a href=""><span>패키지 할인</span></a>
+                        <a href=""><span>eBook</span></a>
+                        <a href=""><span>행정서류지원</span></a>
                         <a href="">
-                            <span>이벤트</span>
-                            <span>이벤트</span>
+                            <strong>이벤트</strong>
+                            <strong>이벤트</strong>
                         </a>
                     </li>
-                    <li>
-                        <a href="">공지사항</a>
-                        <a href="">공지사항</a>
-                        <a href="">회사소개</a>
-                        <a href="">1:1문의</a>
-                        <a href="">고객센터</a>
-                        <a href="">Q&A</a>
+                    <li>                        
+                        <a href=""><span>공지사항</span></a>
+                        <a href=""><span>회사소개</span></a>
+                        <a href=""><span>1:1문의</span></a>
+                        <a href=""><span>고객센터</span></a>
+                        <a href=""><span>Q&A</span></a>
                         <a href="">
-                            <span>BOARD</span>
-                            <span>BOARD</span>
+                            <strong>BOARD</strong>
+                            <strong>BOARD</strong>                                                        
                         </a>
                     </li>
                 </ul>
