--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
         <div class="inner">
             <h1 class="logo"><img src="https://themagazine.co.kr/SG/img/logo.gif" alt="the magazine"></h1>
             <button class="btn-menu">
-                <svg class="ico_menu" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
-                    viewBox="0 0 16 16">
+                <svg class="ico_menu" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
                         d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
                 </svg>
 
-                <svg class="ico_close" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
-                    <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
-                  </svg>
+                <svg class="ico_close" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-x-lg" viewBox="0 0 16 16">
+                    <path
+                        d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
+                </svg>
             </button>
             <div class="gnb-wrapper">
                 <ul class="gnb">
@@ -100,7 +102,7 @@
                             <strong>이벤트</strong>
                         </a>
                     </li>
-                    <li>                        
+                    <li>
                         <a href=""><span>공지사항</span></a>
                         <a href=""><span>회사소개</span></a>
                         <a href=""><span>1:1문의</span></a>
@@ -108,7 +110,7 @@
                         <a href=""><span>Q&A</span></a>
                         <a href="">
                             <strong>BOARD</strong>
-                            <strong>BOARD</strong>                                                        
+                            <strong>BOARD</strong>
                         </a>
                     </li>
                 </ul>
@@ -120,10 +122,95 @@
         <section class="visual">
             <div class="inner">
                 <div class="text">
-                    베스트 패션 국내잡지 어학 산업 기술 문화 예술 레져, 교육 인테리어 경제 경영 스포츠 학술지 지방신문 중앙일간지 어린이신문 회사 공공도서관 카페 헤어. 정기구독이벤트 콜라보레이션 전자책 패키지 행정서류지원 건축 스포츠 경영 취미 월구독. "해외잡지"
+                    베스트 패션 국내잡지 어학 산업 기술 문화 예술 레져, 교육 인테리어 경제 경영 스포츠 학술지 지방신문 중앙일간지 어린이신문 회사 공공도서관 카페 헤어. 정기구독이벤트 콜라보레이션
+                    전자책 패키지 행정서류지원 건축 스포츠 경영 취미 월구독. "해외잡지"
                     국내잡지 어학 산업 기술 문화 예술 지방신문 중앙일간지 어린이신문 회사 공공도서관 카페 건축 스포츠 경영 취미 월구독. "해외잡지"
                 </div>
             </div>
+        </section>
+
+        <section class="area-common">
+            <article class="photo-box"></article>
+            <article>
+                <div class="inner">
+                    <h2>보그코리아 (연12회)</h2>
+                    <p>1년 정기 구독</p>
+                    <ul>
+                        <li>
+                            <dl>
+                                <dt>판매가 :</dt>
+                                <dd>77,000원</dd>
+                            </dl>
+                        </li>
+                        <li>
+                            <dl>
+                                <dt>정 가 :</dt>
+                                <dd class="delete-line">84,000원</dd>
+                            </dl>
+                        </li>
+                        <li>
+                            <dl>
+                                <dt>발행사/형태 :</dt>
+                                <dd>VOGUE</dd>
+                            </dl>
+                        </li>
+                        <li>
+                            <dl>
+                                <dt>발행국/언어 :</dt>
+                                <dd>한국</dd>
+                            </dl>
+                        </li>
+                        <li>
+                            <dl>
+                                <dt>잡지코드 :</dt>
+                                <dd>P0000BEW</dd>
+                            </dl>
+                        </li>
+                    </ul>
+                </div>
+            </article>
+            <article>
+                <div class="inner">
+                    <p>샤넬 컬처 펀드가 후원하는 리움미술관의 퍼블릭 프로그램 ‘아이디어 뮤지엄’의 일환인 ‘에어로센 서울’ 개막을 축하하기 위해 참석한 지드래곤. 샤넬 2024/25 F/W 컬렉션
+                        14번 룩이었던 트위드 소재의 카디건과 팬츠를 착용했다.</p>
+                </div>
+            </article>
+            <article>
+                <div class="inner">
+                    <p>지난해 12월 시작된 아이디어 뮤지엄은 일회성 프로젝트가 아닙니다. 앞으로 2년 동안 기후 위기, 지속 (불)가능성, 생태학, 젠더 이슈와 교육 등 사회 문화적 패러다임이
+                        변화하는 지점을 파고듭니다. 국내외 예술가, 철학자, 과학자들이 ‘생태적 전환’이라는 주제 아래 펼칠 다양한 이야기가 궁금하다면 리움미술관을 방문하세요. "에어로센 서울"은
+                        오는 9월 29일까지 진행됩니다.</p>
+                </div>
+            </article>
+            <article>
+                <div class="inner">
+                    <h2>센스 있는 추석 선물</h2>
+                    <p>성큼 다가온 추석 연휴, 선물이 고민이라면?</p>
+                </div>
+            </article>
+            <article class="photo-box"></article>
+            <article>
+                <div class="inner">
+                    <p>프린트 베이커리는 추석을 맞아 꾸준히 쌓은 옻칠로 고급스러움을 더한 허명욱 작가의 공예 작품, 디자인에 적합한 금속 소재를 선별해 하나하나 자르고 구부리고 이어 붙이는 과정을
+                        통해 손수 만든 윤여동 작가의 테이블웨어, 도자기 특유의 백색을 아름답게 담아내 실용성과 아름다움을 모두 갖춘 이응 세라믹 등 다양한 공예품으로 구성한 선물 패키지를
+                        출시했습니다. 9월 30일까지 구매 시 고급스러운 산수화 보자기 패키지가 함께 제공됩니다. 인스타그램 <a
+                            href="https://www.instagram.com/print_bakery/" title="프린트베이커리 인스타그램">@print_bakery</a></p>
+                </div>
+            </article>
+            <article>
+                <div class="inner">
+                    <h2>지금 향기에 대한 모든 것</h2>
+                </div>
+            </article>
+            <article>
+                <div class="inner">
+                    <p>기억의 시, 감정의 공유, 자아 발견의 여정, 윤택한 삶을 위한 예술. 〈보그〉가 만난 세계 최고의 조향사들이 ‘향수’를 정의한 표현이다. 이렇듯 향은 그저 공기를 타고
+                        코끝에 닿는 후각적 개념으로만 한정할 수 없다. 태어날 때 가장 먼저 발달하는 후각은 뇌와 바로 연결된 감각으로 우리는 향을 통해 감정을 인식한다. 아름다운 디자인은 시각적
+                        만족감을 주고, 새콤달콤한 화학식은 미뢰를 자극하며, 피부로 느낀 감촉 또는 어떤 리듬을 떠올리게 하고, 겪어본 적 없는 고차원의 세계로 우리를 이끈다. 오감을 뛰어넘는
+                        감각, 그 이상의 경험을 선사하는 〈보그〉식 향기 프레젠테이션.</p>
+                </div>
+            </article>
+            <article class="photo-box"></article>
         </section>
     </main>
 
