--- a/index.html
+++ b/index.html
@@ -120,12 +120,8 @@
 
     <main class="contents">
         <section class="visual">
-            <div class="inner">
-                <div class="text">
-                    베스트 패션 국내잡지 어학 산업 기술 문화 예술 레져, 교육 인테리어 경제 경영 스포츠 학술지 지방신문 중앙일간지 어린이신문 회사 공공도서관 카페 헤어. 정기구독이벤트 콜라보레이션
-                    전자책 패키지 행정서류지원 건축 스포츠 경영 취미 월구독. "해외잡지"
-                    국내잡지 어학 산업 기술 문화 예술 지방신문 중앙일간지 어린이신문 회사 공공도서관 카페 건축 스포츠 경영 취미 월구독. "해외잡지"
-                </div>
+            <div class="inner">                
+                  <div class="text">The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea</div>
             </div>
         </section>
 
