--- a/index.html
+++ b/index.html
@@ -120,8 +120,14 @@
 
     <main class="contents">
         <section class="visual">
-            <div class="inner">                
-                  <div class="text">The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription platform in Korea</div>
+            <div class="inner">
+                <div class="text">The Magazine, the largest magazine subscription platform in Korea The Magazine, the
+                    largest magazine subscription platform in Korea The Magazine, the largest magazine subscription
+                    platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine,
+                    the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription
+                    platform in Korea The Magazine, the largest magazine subscription platform in Korea The Magazine,
+                    the largest magazine subscription platform in Korea The Magazine, the largest magazine subscription
+                    platform in Korea</div>
             </div>
         </section>
 
@@ -208,6 +214,19 @@
             </article>
             <article class="photo-box"></article>
         </section>
+
+        <section class="area-scroll">
+            <div class="scroll-inner">
+                <span class="hero-img"><img
+                        src="https://img.vogue.co.kr/vogue/2024/08/style_66d158ba47ab9-1120x1400.jpeg"
+                        alt="배경이미지"></span>
+                <h2>
+                    <div class="text-inner">
+                        <span>업종별 베스트셀러</span>
+                    </div>
+                </h2>
+            </div>
+        </section>
     </main>
 
     <footer id="footer">
@@ -219,6 +238,32 @@
     <script src="./js/index.js"></script>
     <script src="./js/matter.js"></script>
     <script src="./js/effect.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script>
+        gsap.to(".area-scroll", {
+            scrollTrigger: {
+                trigger: ".scroll-inner",
+                scrub: true,
+                pin: true,
+                start: "center center",
+                end: "bottom -100%",
+                toggleClass: "on",
+                ease: "power2"
+            }
+        });
+
+        gsap.to(".hero-img img", {
+            scrollTrigger: {
+                trigger: ".scroll-inner",
+                scrub: 0.5,
+                start: "top bottom",
+                end: "bottom -300%",
+                ease: "power2"
+            },
+            y: "-30%"
+        });
+    </script>
 </body>
 
 </html>
