하단 콘텐츠 추가

--- a/index.html
+++ b/index.html
@@ -227,6 +227,31 @@
                 </h2>
             </div>
         </section>
+
+        <section class="area-common sub">
+            <div class="inner">
+                <h2>구독방법</h2>
+                <p>
+                    세계적인 권위의 패션, 뷰티, 라이프 스타일 전문 미디어 <br>
+                    보그, 지큐,얼루어, 더블유를 구독하고 다양한 혜택을 누리세요.                
+                </p>
+
+                <div class="list-wrapper">
+                    <ul class="list-box">
+                        <li>
+                            <h3>보그 정기구독</h3>
+                            <button>구독하기</button>
+                            <figure><img src="https://contents.kyobobook.co.kr/sih/fit-in/458x0/pdt/3904000473871.jpg" alt="보그2024"></figure>
+                        </li>
+                        <li>
+                            <h3>지큐 정기구독</h3>
+                            <button>구독하기</button>
+                            <figure><img src="https://contents.kyobobook.co.kr/sih/fit-in/458x0/pdt/3904000468679.jpg" alt="지큐2024"></figure>
+                        </li>
+                    </ul>
+                </div>    
+            </div>                                
+        </section>
     </main>
 
     <footer id="footer">
