--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <div class="dim"></div>
+
     <header id="header">
         <div class="inner">
             <h1 class="logo"><img src="https://themagazine.co.kr/SG/img/logo.gif" alt="the magazine"></h1>
